--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,16 @@
   "content_scripts": [
     {
       "matches": ["http://comic.sfacg.com/*/*/*"],
-      "js": ["bower_components/react/react.js", "assets/javascripts/build/components/viewer.js","assets/javascripts/build/sfacg.js"]
+      "css": [
+        "bower_components/normalize-css/normalize.css",
+        "bower_components/components-font-awesome/css/font-awesome.min.css",
+        "assets/stylesheets/build/viewer.css"
+      ],
+      "js": [
+        "bower_components/react/react.js", 
+        "assets/javascripts/build/components/viewer.js",
+        "assets/javascripts/build/sfacg.js"
+      ]
     }
   ],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
