--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xiangmin",
-  "description": "A online comic viewer",
+  "description": "An online comic viewer",
   "version": "3.0.0",
   "devDependencies": {
     "del": "^0.1.1",
@@ -13,8 +13,13 @@
     "gulp-livereload": "^2.1.0",
     "gulp-minify-css": "^0.3.7",
     "gulp-notify": "^1.4.2",
+    "gulp-react": "^0.5.0",
     "gulp-rename": "^1.2.0",
     "gulp-ruby-sass": "^0.7.1",
     "gulp-uglify": "^0.3.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kaddopur/xiangmin.git"
   }
 }
