--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
   "author": "kaddopur",
   "content_scripts": [
     {
-      "matches": ["http://comic.sfacg.com/*/*/*"],
+      "matches": ["http://comic.sfacg.com/HTML/*/*/*"],
       "css": [
         "bower_components/normalize-css/normalize.css",
         "bower_components/components-font-awesome/css/font-awesome.min.css",
