--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/kaddopur/xiangmin.git"
+  },
+  "dependencies": {
+    "bower": "^1.3.9"
   }
 }
