--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "components-font-awesome": "~4.2.0",
     "normalize-css": "~3.0.1",
-    "react": "~0.11.2"
+    "react": "~0.11.2",
+    "jquery": "~2.1.1"
   }
 }
