Bower: jquery.lazyload

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "components-font-awesome": "~4.2.0",
     "normalize-css": "~3.0.1",
     "react": "~0.11.2",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "jquery.lazyload": "~1.9.3"
   }
 }
