--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
       ],
       "js": [
         "bower_components/jquery/dist/jquery.min.js",
+        "bower_components/jquery.lazyload/jquery.lazyload.min.js",
         "bower_components/react/react.js", 
         "dist/assets/js/components/viewer.js",
         "dist/assets/js/sfacg.js"
