--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "version": "3.0",
 
   // Recommended
-  "description": "A plain text description",
+  "description": "An online comic viewer",
 
 
   // Optional
